gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/goto3.d
version https://git-lfs.github.com/spec/v1
oid sha256:2670fa57e4042e0ee2031d30930bb7f8153f15ed44c64daa73fbd7ccff181de2
size 573
